
Version 0.4	- xx April 2001
  * Handle apply(BaseClass.__init__(self, args))
  * Fix **kwArgs warning if named param is not first

Version 0.3	- 17 April 2001
  * Fix some checker crashes (oops)
  * Add warnings for code complexity (lines/branches/returns per func)
  * Add more configuration options
  * Don't produce spurious warning for:  x(y, { 'a': 'b' })
  * Fix warnings that indicate they are from a base class file,
    rather than real file
  * Fix warnings for **kwArgs not allowed, but using named args
  * Add config option for warning when using attribute as a function
  	(off by default, old behaviour was on)

Version 0.2.5	- 12 April 2001
  * Add back support for Python 1.5.2 (again)
  	(I sure like 2.0 more with the [ for ] and string methods.)
  * Add new warning for unused local variables
  * Add command line switches

Version 0.2	- 10 April 2001
  * Move tests into a subdirectory so import test doesn't import pychecker/test
  * Add more test files
  * Add '.' to the python path so it doesn't need to be done in env't
  * Print a warning at the end for each file that couldn't be import'ed
  * Improve stack handling to improve error handling
  * Try to get base class __init__ checking to work for both:
  	import X.Y
	from X import Y

Version 0.1.1	- 8 April 2001
  * Add support for Python 1.5.2

Version 0.1	- 7 April 2001
  * Initial release
